live location using chartjs and react leaflet

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#canvas{
+  width:800px;
+}
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+#root{
+  height:100vh
+}
+.leaflet-container{
+  height:400px;
+  width:800px;
+  margin-left:80px;
+  
+}
