--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,29 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-#canvas{
-  width:800px;
+#canvas {
+  width: 800px;
 }
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-#root{
-  height:100vh
+#root {
+  height: 100vh;
 }
-.leaflet-container{
-  height:400px;
-  width:800px;
-  margin-left:80px;
-  
+.leaflet-container {
+  height: 400px;
+  width: 800px;
+  margin-left: 80px;
 }
